--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,8 +5,8 @@ import TestView from "@components/TestView.vue";
 
 <Layout>
     <div class="-translate-y-8">
-        <div class="bg-white">页面 Index</div>
-        <a href="/about">页面跳转</a>
+        <div class="bg-white">页面 About</div>
+        <a href="/">页面跳转</a>
         <TestView />
     </div>
 </Layout>
