--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,9 +5,9 @@ import Banner from "@components/Banner.astro";
 import { config } from "@/config";
 
 interface Props {
-  title?: string;
-  description?: string;
-  lang?: string;
+    title?: string;
+    description?: string;
+    lang?: string;
 }
 
 let { title, description, lang } = Astro.props;
@@ -16,87 +16,90 @@ let pageTitle: string;
 const isHome = Astro.url.pathname === "/";
 
 if (!lang) {
-  lang = config.lang;
+    lang = config.lang;
 }
 
 if (title) {
-  pageTitle = `${title} - ${config.title}`;
+    pageTitle = `${title} - ${config.title}`;
 } else {
-  pageTitle = `${config.title} - ${config.subtitle}`;
+    pageTitle = `${config.title} - ${config.subtitle}`;
 }
 ---
 
 <!doctype html>
 <html lang={lang} data-overlayscrollbars-initialize>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="description" content={description || pageTitle} />
-    <meta name="author" content={config.author} />
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="description" content={description || pageTitle} />
+        <meta name="author" content={config.author} />
 
-    <meta property="og:site_name" content={config.title} />
-    <meta property="og:url" content={Astro.url} />
-    <meta property="og:title" content={pageTitle} />
-    <meta property="og:description" content={description || pageTitle} />
+        <meta property="og:site_name" content={config.title} />
+        <meta property="og:url" content={Astro.url} />
+        <meta property="og:title" content={pageTitle} />
+        <meta property="og:description" content={description || pageTitle} />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content={Astro.url} />
-    <meta name="twitter:title" content={pageTitle} />
-    <meta name="twitter:description" content={description || pageTitle} />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta property="twitter:url" content={Astro.url} />
+        <meta name="twitter:title" content={pageTitle} />
+        <meta name="twitter:description" content={description || pageTitle} />
 
-    <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{pageTitle}</title>
+        <meta name="viewport" content="width=device-width" />
+        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+        <meta name="generator" content={Astro.generator} />
+        <title>{pageTitle}</title>
 
-    <script is:inline>
-      if (localStorage.getItem("theme") === "dark") {
-        document.documentElement.classList.add("dark");
-      } else {
-        document.documentElement.classList.remove("dark");
-      }
-    </script>
-  </head>
-  <body class:list={isHome ? "is-home" : ""}>
-    <Navbar client:load />
-    <Banner />
-    <main>
-      <slot />
-    </main>
-  </body>
+        <script is:inline>
+            if (localStorage.getItem("theme") === "dark") {
+                document.documentElement.classList.add("dark");
+            } else {
+                document.documentElement.classList.remove("dark");
+            }
+        </script>
+
+        <link href="https://font.sec.miui.com/font/css?family=Source_Han_Serif:400,600:Chinese_Simplify,Chinese_Traditional,Latin,Numeric&display=swap" rel="stylesheet" />
+        <link href="https://font.sec.miui.com/font/css?family=MiSans:400,700:Chinese_Simplify,Chinese_Traditional,Latin,Numeric&display=swap" rel="stylesheet" />
+    </head>
+    <body class:list={isHome ? "is-home" : ""}>
+        <Navbar client:load />
+        <Banner />
+        <main>
+            <slot />
+        </main>
+    </body>
 </html>
 
 <script>
-  import "overlayscrollbars/overlayscrollbars.css";
-  import { OverlayScrollbars } from "overlayscrollbars";
-  import Lenis from "lenis";
+    import "overlayscrollbars/overlayscrollbars.css";
+    import { OverlayScrollbars } from "overlayscrollbars";
+    import Lenis from "lenis";
 
-  function initCustomScrollbar() {
-    OverlayScrollbars(
-      {
-        target: document.body,
-        cancel: {
-          nativeScrollbarsOverlaid: true,
-        },
-      },
-      {
-        scrollbars: {
-          theme: "os-theme-custom os-theme-dark",
-          autoHide: "move",
-          autoHideDelay: 500,
-          autoHideSuspend: false,
-        },
-      }
-    );
-  }
+    function initCustomScrollbar() {
+        OverlayScrollbars(
+            {
+                target: document.body,
+                cancel: {
+                    nativeScrollbarsOverlaid: true,
+                },
+            },
+            {
+                scrollbars: {
+                    theme: "os-theme-custom os-theme-dark",
+                    autoHide: "move",
+                    autoHideDelay: 500,
+                    autoHideSuspend: false,
+                },
+            }
+        );
+    }
 
-  function initLenis() {
-    new Lenis({ autoRaf: true });
-  }
+    function initLenis() {
+        new Lenis({ autoRaf: true });
+    }
 
-  function init() {
-    initCustomScrollbar();
-    initLenis();
-  }
+    function init() {
+        initCustomScrollbar();
+        initLenis();
+    }
 
-  init();
+    init();
 </script>
