--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -5,19 +5,39 @@ import PostCard from "@components/PostCard.astro";
 import { getPosts } from "@utils/content-utils";
 
 export const getStaticPaths = (async ({ paginate }) => {
-  const allPosts = await getPosts();
-  return paginate(allPosts, { pageSize: 10 });
+    const allPosts = await getPosts();
+    return paginate(allPosts, { pageSize: 10 });
 }) satisfies GetStaticPaths;
 
 const { page } = Astro.props;
 ---
 
 <Layout>
-  <div class="mx-auto max-w-4xl flex flex-col gap-y-4 px-4">
-    {
-      page.data.map((entry) => {
-        return <PostCard title={entry.data.title} image={entry.data.image} />;
-      })
-    }
-  </div>
+    <div class="mx-auto max-w-4xl flex flex-col gap-y-6 px-4">
+      <PostCard title={page.data[0].data.title} image={page.data[0].data.image} />
+      <PostCard title={page.data[0].data.title} image={page.data[0].data.image} />
+      <PostCard title={page.data[0].data.title} image={page.data[0].data.image} />
+      <PostCard title={page.data[0].data.title} image={page.data[0].data.image} />
+      <PostCard title={page.data[0].data.title} image={page.data[0].data.image} />
+      <PostCard title={page.data[0].data.title} image={page.data[0].data.image} />
+      <PostCard title={page.data[0].data.title} image={page.data[0].data.image} />
+      <PostCard title={page.data[0].data.title} image={page.data[0].data.image} />
+      <PostCard title={page.data[0].data.title} image={page.data[0].data.image} />
+      <PostCard title={page.data[0].data.title} image={page.data[0].data.image} />
+      <PostCard title={page.data[0].data.title} image={page.data[0].data.image} />
+      <PostCard title={page.data[0].data.title} image={page.data[0].data.image} />
+      <PostCard title={page.data[0].data.title} image={page.data[0].data.image} />
+      <PostCard title={page.data[0].data.title} image={page.data[0].data.image} />
+      <PostCard title={page.data[0].data.title} image={page.data[0].data.image} />
+      <PostCard title={page.data[0].data.title} image={page.data[0].data.image} />
+      <PostCard title={page.data[0].data.title} image={page.data[0].data.image} />
+      <PostCard title={page.data[0].data.title} image={page.data[0].data.image} />
+      <PostCard title={page.data[0].data.title} image={page.data[0].data.image} />
+      <PostCard title={page.data[0].data.title} image={page.data[0].data.image} />
+      <PostCard title={page.data[0].data.title} image={page.data[0].data.image} />
+      <PostCard title={page.data[0].data.title} image={page.data[0].data.image} />
+      <PostCard title={page.data[0].data.title} image={page.data[0].data.image} />
+      <PostCard title={page.data[0].data.title} image={page.data[0].data.image} />
+      <PostCard title={page.data[0].data.title} image={page.data[0].data.image} />
+    </div>
 </Layout>
