--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -1,36 +1,36 @@
 ---
-import { getImage, Picture } from "astro:assets";
-import sharp from "sharp";
-import fs from "fs";
-import { rgbaToThumbHash, thumbHashToDataURL } from "thumbhash";
+import { imageToBlurHash } from "@utils/image-utils";
+import BlurImage from "./Images/BlurImage.astro";
 
 interface Props {
-  title: string;
-  image: ImageMetadata;
+    title: string;
+    image: ImageMetadata;
 }
 
 const { title, image } = Astro.props;
-// const filePath = (new RegExp(`^${FS_PREFIX}([^?#]*)`).exec(resolvedSrc.src)?.[1] ?? "")
-// blurhash = await imageToHashBase64(filePath);
-// fs.readFileSync(image.src);
-// console.log(image)
-// const bg = sharp(image.src).resize(100, 100, { fit: "inside" });
-// const { data, info } = await bg.ensureAlpha().raw().toBuffer({ resolveWithObject: true });
-// const binaryThumbHash = rgbaToThumbHash(info.width, info.height, data);
-// const placeholderURL = thumbHashToDataURL(binaryThumbHash);
-// console.log(await bg.ensureAlpha().raw().toBuffer())
+
+// const blurhash = `url(${await imageToBlurHash(image)})`;
+const blurhash = "";
 ---
 
-<div
-  class="bg-white dark:bg-black rounded-md p-4 shadow-md shadow-gray-900/5 h-56"
->
-  <Picture
-    src={image}
-    alt=""
-    class=""
-    formats={["avif", "webp"]}
-    loading="eager"
-    fetchpriority="high"
-  />
-  {title}
+<div class="h-56 blurhash rounded-md flex onload-animatio">
+    <BlurImage src={image} class="w-1/3 bg-clip-padding rounded-l-md" />
+    <div class="p-4">
+        {title}
+    </div>
 </div>
+
+<style define:vars={{ blurhash }}>
+    .blurhash {
+        background-image: var(--blurhash);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+</style>
+
+<style is:global>
+    .blurhash img {
+        clip-path: polygon(0 0, 100% 0, 94% 100%, 0 100%);
+    }
+</style>
